--- a/Contactos.html
+++ b/Contactos.html
@@ -38,7 +38,7 @@
 					<div class="collapse navbar-collapse" id="navbarResponsive">
 						<ul class="navbar-nav ml-auto">
 							<li class="nav-item">
-								<a class="nav-link" href="Index">Home</a>
+								<a class="nav-link" href="index">Home</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="Oradores">Oradores</a>
